--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.pyc
 __pycache__
 db.sqlite3
+db.posgresql
 media
 
 # Backup files # 
@@ -78,11 +79,14 @@ celerybeat-schedule.*
 # Environments 
 .env 
 .venv 
+.myenv
 env/ 
 venv/ 
+myenv/
 ENV/ 
 env.bak/ 
 venv.bak/ 
+myenv.bak/
 
 # mkdocs documentation 
 /site 
